--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="shortcut icon" type="image/x-icon" href="./img/hbd.png">
-  <title>Happy Birthday Ayesha!</title>
+  <title>Happy Birthday Ayesha!💘</title>
   <style>
     /* CSS Utama */
     * {
@@ -862,7 +862,7 @@
     <!-- Slide with scrollable photos -->
     <div id="slideFoto" class="slides d-none paper animate__animated animate__fadeInUp">
       <div class="text-center">
-        <h3 class="photo-title">✨ Our Beautiful Moments ✨</h3>
+        <h3 class="photo-title">✨ Peri Cantik Sedang Berfoto ✨</h3>
         
         <!-- Swiper Container -->
         <div class="swiper mySwiper">
@@ -870,22 +870,22 @@
             <!-- Photo 1 -->
             <div class="swiper-slide" onclick="openPhoto('./img/1.jpeg', 'Kasih judul we 1')">
               <img src="./img/1.jpeg" alt="Memory 1">
-              <div class="slide-caption">Kasih judul we 1</div>
+              <div class="slide-caption">1</div>
             </div>
             <!-- Photo 2 -->
             <div class="swiper-slide" onclick="openPhoto('./img/2.jpeg', 'Kasih judul we 2')">
               <img src="./img/2.jpeg" alt="Memory 2">
-              <div class="slide-caption">Kasih judul we 2</div>
+              <div class="slide-caption">2</div>
             </div>
             <!-- Photo 3 -->
             <div class="swiper-slide" onclick="openPhoto('./img/3.jpeg', 'Kasih judul we 3')">
               <img src="./img/3.jpeg" alt="Memory 3">
-              <div class="slide-caption">Kasih judul we 3</div>
+              <div class="slide-caption">3</div>
             </div>
             <!-- Photo 4 -->
             <div class="swiper-slide" onclick="openPhoto('./img/4.jpeg', 'Kasih judul we 4')">
               <img src="./img/4.jpeg" alt="Memory 4">
-              <div class="slide-caption">Kasih judul we 4</div>
+              <div class="slide-caption">4</div>
             </div>
           </div>
           
@@ -1412,3 +1412,4 @@
 </body>
 
 </html>
+
